syntax = "proto3";

package stats.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.stats.event";

message InteractionsCountRequestProto {
  repeated int64 event_id = 1;
}
