syntax = "proto3";

package stats.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.stats.event";

message UserPredictionsRequestProto {
  int64 user_id = 1;
  int32 max_results = 2;
}
